remove jdbi.