@@ -2,7 +2,4 @@ lazy val root = (project in file(".")).
   settings(
     test in Test := {
       val _ = (g8Test in Test).toTask("").value
-    },
-    scriptedLaunchOpts ++= List("-Xms1024m", "-Xmx2048m", "-XX:ReservedCodeCacheSize=128m", "-XX:MaxPermSize=512m", "-Xss2m", "-Dfile.encoding=UTF-8"),
-    resolvers += Resolver.url("typesafe", url("http://repo.typesafe.com/typesafe/ivy-releases/"))(Resolver.ivyStylePatterns)
-  )
+    })
